get single stok in, get single stok out
