# model/stok_keluar_model.go
@@ -1,4 +1,5 @@
 package model
+import "time"
 
 type StockOut struct {
 	ID        int
@@ -13,4 +14,15 @@ type StockOutProduct struct {
 	StockOutID int
 	ProductID  int
 	Qty        float64
+}
+
+type StockOutList struct {
+	ID          int       `json:"id"`
+	Pelanggan   string    `json:"pelanggan"`
+	Status      string    `json:"status"`
+	CreatedAt   time.Time `json:"created_at"`
+
+	ProductID   int     `json:"product_id"`
+	ProductName string  `json:"product_name"`
+	Qty         float64 `json:"qty"`
 }
