# model/stok_masuk_model.go
@@ -1,4 +1,5 @@
 package model
+import "time"
 
 type StockIn struct {
 	ID        int
@@ -13,4 +14,15 @@ type StockInProduct struct {
 	StockInID int
 	ProductID int
 	Qty       float64
+}
+
+type StockInList struct {
+	ID        int     `json:"id"`
+	Supplier  string  `json:"supplier"`
+	Status    string  `json:"status"`
+	CreatedAt     time.Time
+
+	ProductID   int     `json:"product_id"`
+	ProductName string  `json:"product_name"`
+	Qty         float64 `json:"qty"`
 }
